cluster/manifests/utilities/qdrant/stateful_set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qdrant
spec:
  serviceName: qdrant
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  selector:
    matchLabels: &labels
      app.kubernetes.io/name: qdrant
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: qdrant
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsUser: 65532
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          image: qdrant/qdrant
          imagePullPolicy: IfNotPresent
          workingDir: /working
          ports:
            - name: http
              containerPort: 6333
              protocol: TCP
            - name: grpc
              containerPort: 6334
              protocol: TCP
            - name: grpc-p2p
              containerPort: 6335
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 3
            failureThreshold: 1
            timeoutSeconds: 5
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "3"]
          volumeMounts:
            - name: working
              mountPath: /working
            - name: qdrant-tools
              mountPath: /working/entrypoint.sh
              subPath: entrypoint.sh
              readOnly: true
      volumes:
        - name: working
          emptyDir:
            medium: Memory
        - name: qdrant-tools
          configMap:
            name: qdrant-tools
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
                mode: 0755
